--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -9,7 +9,7 @@
       <div class="key">7</div>
       <div class="key">8</div>
       <div class="key">9</div>
-      <div class="key">x</div>
+      <div class="key">*</div>
     </div>
     <div class="keyboard-row">
       <div class="key">4</div>
